<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <EditText
        android:id="@+id/edit_text_username"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:textColor = "#FF0000"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_text_username"
        android:layout_below="@+id/edit_text_username"
        android:layout_marginTop="54dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/edit_text_username"
        android:layout_alignLeft="@+id/edit_text_password"
        android:layout_below="@+id/edit_text_password"
        android:layout_marginTop="29dp"
        android:hint="@string/login"
        android:text="@string/loginButton" />

</RelativeLayout>